Fix: remove side-scroll when child overflows parent

--- a/client/src/components/gallery/Gallery.css
+++ b/client/src/components/gallery/Gallery.css
@@ -33,6 +33,11 @@
 	margin-top: .5em;
 }
 
+.gallery {
+	
+	
+}
+
 .gallery > * {
 
 	margin-bottom: 2.5em;
